--- a/public/templates/partials/head.ejs
+++ b/public/templates/partials/head.ejs
@@ -3,7 +3,6 @@
 <title>RepairLog</title>
 
 <link rel="stylesheet" href="css/bootstrap.min.css" />
-<link rel="stylesheet" href="css/bootstrap-thene.min.css" />
+<link rel="stylesheet" href="css/font-awesome.min.css" />
 <link rel="stylesheet" href="css/bootstrap-table/bootstrap-table.min.css" />
-<link rel="stylesheet" href="css/bootstrap-table/extensions/bootstrap-table-filter-control.min.css" />
 <link rel="stylesheet" href="css/style.css" />
