--- a/public/templates/partials/scripts.ejs
+++ b/public/templates/partials/scripts.ejs
@@ -2,5 +2,10 @@
 <script src="js/bootstrap.min.js"></script>
 <script src="js/bootstrap-table/bootstrap-table.min.js"></script>
 <script src="js/bootstrap-table/locale/bootstrap-table-vi-VN.min.js"></script>
-<script src="js/bootstrap-table/extensions/bootstrap-table-filter-control.min.js"></script>
-<script src="js/main.js"></script>
+<script src="js/bootstrap-table/extensions/bootstrap-table-cookie.min.js"></script>
+<script src="js/table-control.js"></script>
+<script>
+    $(function () {
+        initTable('#table');
+    });
+</script>
