--- a/public/templates/pages/index.ejs
+++ b/public/templates/pages/index.ejs
@@ -5,7 +5,9 @@
     </head>
 
     <body>
+        <%- include('../partials/menu') %>
         <div class="container-fluid">
+            <div class="row"><%- include('../partials/header') %></div>
             <div class="row">
                 <div class="col-md-12"><%- include('../partials/table') %></div>
             </div>
