--- a/public/templates/partials/table.ejs
+++ b/public/templates/partials/table.ejs
@@ -1,28 +1,58 @@
+<div id="toolbar">
+    <div class="btn-group" style="margin-right: 10px">
+        <a href="#" id="menuAdd" class="btn btn-default" data-toggle="modal" data-target="#modalNew"
+            ><span class="glyphicon glyphicon-plus"></span> Thêm
+        </a>
+        <a href="#" id="menuDel" class="btn btn-danger disabled" data-toggle="modal" data-target="#modalDelete"
+            ><span class="glyphicon glyphicon-trash"></span> Xóa
+        </a>
+    </div>
+    <div class="btn-group">
+        <div id="menuOthers" class="dropdown">
+            <button class="btn btn-default dropdown-toggle" data-toggle="dropdown">
+                Tác vụ khác <span class="caret"></span>
+            </button>
+            <ul class="dropdown-menu">
+                <li class="dropdown-item hidden"><a href="#">Đánh dấu đang sửa</a></li>
+                <li class="dropdown-item hidden"><a href="#">Đánh dấu đã tác động</a></li>
+                <li class="dropdown-item hidden"><a href="#">Đánh dấu chờ trả</a></li>
+                <li class="dropdown-item hidden"><a href="#">Đánh dấu in phiếu</a></li>
+                <li class="dropdown-item hidden"><a href="#">Đánh dấu kết thúc</a></li>
+                <li class="dropdown-header">Chọn thiết bị để xem thêm tác vụ</li>
+            </ul>
+        </div>
+    </div>
+</div>
+
 <table
     id="table"
-    data-toggle="table"
+    data-toolbar="#toolbar"
+    data-cookie="true"
+    data-cookie-id-table="saveId"
     data-undefined-text=""
-    data-url="/api/excel"
+    data-data="<%= data %>"
     data-pagination="true"
+    data-page-size="100"
+    data-page-list="[50, 100, 200, 500, All]"
     data-show-columns="true"
     data-search="true"
+    data-visible-search="true"
     data-search-highlight="true"
     data-click-to-select="false"
-    data-filter-control="true"
-    data-show-search-clear-button="true"
+    data-multiple-select-row="true"
 >
     <thead>
         <tr>
             <th data-field="state" data-checkbox="true"></th>
-            <th data-field="receiptNo" data-filter-control="input">Mã phiếu</th>
-            <th data-field="model" data-filter-control="input">Tên TB</th>
-            <th data-field="serial" data-filter-control="input">Số Sêri</th>
-            <th data-field="description" data-filter-control="input">Mô tả lỗi</th>
-            <th data-field="newSerial" data-filter-control="input">Sêri mới</th>
-            <th data-field="method" data-filter-control="select">Biện pháp</th>
-            <th data-field="remarks" data-filter-control="input">Chi tiết SC</th>
-            <th data-field="status" data-filter-control="select">Trạng thái</th>
-            <th data-field="createdAt" data-filter-control="input">Ngày lập</th>
+            <th data-field="receiptNo" data-sortable="true">Mã phiếu</th>
+            <th data-field="model" data-sortable="true">Tên TB</th>
+            <th data-field="serial" data-sortable="true">Số Sêri</th>
+            <th data-field="description" data-sortable="true">Mô tả lỗi</th>
+            <th data-field="newSerial" data-sortable="true">Sêri mới</th>
+            <th data-field="method" data-sortable="true">Biện pháp</th>
+            <th data-field="remarks" data-sortable="true">Chi tiết SC</th>
+            <th data-field="status" data-sortable="true">Trạng thái</th>
+            <th data-field="createdAt" data-sortable="true">Ngày lập</th>
         </tr>
     </thead>
 </table>
