--- a/public/templates/partials/menu.ejs
+++ b/public/templates/partials/menu.ejs
@@ -13,16 +13,19 @@
         <ul class="nav navbar-nav navbar-right">
             <li class="dropdown">
                 <a class="dropdown-toggle" href="#" data-toggle="dropdown" role="button" aria-expanded="false">
-                    Import
+                    Nhập dữ liệu theo file
                     <span class="caret"></span>
                 </a>
                 <ul class="dropdown-menu" role="menu">
-                    <li><a href="#"> Dữ liệu tiếp nhận</a></li>
+                    <li><a href="/upload/today"> Tiếp nhận</a></li>
                     <li class="divider"></li>
-                    <li><a href="#"> Serial mới </a></li>
-                    <li><a href="#">Biện pháp</a></li>
-                    <li><a href="#">Chi tiết</a></li>
-                    <li><a href="#">Trạng thái</a></li>
+                    <li><a href="/upload/newSerial"> Serial mới </a></li>
+                    <li class="divider"></li>
+                    <li><a href="/upload/method">Biện pháp</a></li>
+                    <li class="divider"></li>
+                    <li><a href="/upload/remark">Chi tiết</a></li>
+                    <li class="divider"></li>
+                    <li><a href="/upload/status">Trạng thái</a></li>
                 </ul>
             </li>
         </ul>
