--- a/public/templates/partials/table.ejs
+++ b/public/templates/partials/table.ejs
@@ -13,11 +13,11 @@
                 Tác vụ khác <span class="caret"></span>
             </button>
             <ul class="dropdown-menu">
-                <li class="dropdown-item hidden"><a href="#">Đánh dấu đang sửa</a></li>
-                <li class="dropdown-item hidden"><a href="#">Đánh dấu đã tác động</a></li>
-                <li class="dropdown-item hidden"><a href="#">Đánh dấu chờ trả</a></li>
-                <li class="dropdown-item hidden"><a href="#">Đánh dấu in phiếu</a></li>
-                <li class="dropdown-item hidden"><a href="#">Đánh dấu kết thúc</a></li>
+                <% statuses.forEach(status => { %>
+                <li class="dropdown-item hidden" data-url="/api/v1/status/<%= status.slug %>">
+                    <a href="#">Đánh dấu <%= status.name %></a>
+                </li>
+                <% }) %>
                 <li class="dropdown-header">Chọn thiết bị để xem thêm tác vụ</li>
             </ul>
         </div>
@@ -30,7 +30,7 @@
     data-cookie="true"
     data-cookie-id-table="saveId"
     data-undefined-text=""
-    data-data="<%= data %>"
+    data-url="<%= url %>"
     data-pagination="true"
     data-page-size="100"
     data-page-list="[50, 100, 200, 500, All]"
@@ -39,7 +39,6 @@
     data-visible-search="true"
     data-search-highlight="true"
     data-click-to-select="false"
-    data-multiple-select-row="true"
 >
     <thead>
         <tr>
@@ -50,7 +49,7 @@
             <th data-field="description" data-sortable="true">Mô tả lỗi</th>
             <th data-field="newSerial" data-sortable="true">Sêri mới</th>
             <th data-field="method" data-sortable="true">Biện pháp</th>
-            <th data-field="remarks" data-sortable="true">Chi tiết SC</th>
+            <th data-field="remark" data-sortable="true">Chi tiết SC</th>
             <th data-field="status" data-sortable="true">Trạng thái</th>
             <th data-field="createdAt" data-sortable="true">Ngày lập</th>
         </tr>
