--- a/public/templates/layouts/default.ejs
+++ b/public/templates/layouts/default.ejs
@@ -4,6 +4,8 @@
         <%- include("../partials/head"); %>
         <link rel="stylesheet" href="/css/bootstrap.min.css" />
         <link rel="stylesheet" href="/css/font-awesome.min.css" />
+        <link rel="stylesheet" href="/css/bootstrap-datepicker3.min.css" />
+        <link rel="stylesheet" href="/css/style.css" />
         <%- style %>
     </head>
 
@@ -19,8 +21,12 @@
         </div>
         <script src="/js/jquery-3.2.1.min.js"></script>
         <script src="/js/bootstrap.min.js"></script>
+        <script src="/js/bootstrap-datepicker.min.js"></script>
+        <script src="/js/moment.js"></script>
+
         <script src="/js/utils.js"></script>
         <script src="/js/stats.js"></script>
+        <script src="/js/main.js"></script>
         <%- script %>
     </body>
 </html>
