--- a/public/templates/partials/menu.ejs
+++ b/public/templates/partials/menu.ejs
@@ -7,16 +7,10 @@
             <span class="icon-bar"></span>
         </button>
         <div class="navbar-header">
-            <a class="navbar-brand" href="/"><span class="glyphicon glyphicon-home"></span></a>
+            <a class="navbar-brand" href="/"><span>REPAIRLOG</span></a>
         </div>
 
-        <ul class="nav navbar-nav navbar-right">
-            <li>
-                <a href="#footwear" aria-expanded="true" aria-controls="footwear" data-toggle="collapse" role="button"
-                    >Tìm kiếm nâng cao</a
-                >
-            </li>
-
+        <ul class="nav navbar-nav">
             <li class="dropdown-right">
                 <a class="dropdown-toggle" href="#" data-toggle="dropdown" role="button" aria-expanded="false">
                     Nhập dữ liệu
@@ -35,18 +29,11 @@
                 </ul>
             </li>
         </ul>
+        <ul class="nav navbar-nav navbar-right">
+            <li>
+                <a href="#" role="button" class="btn-search"><i class="glyphicon glyphicon-search"></i></a>
+                <%- include('./search') %>
+            </li>
+        </ul>
     </div>
 </nav>
-
-<div id="footwear" class="collapse">
-    <form role="search">
-        <div class="input-group">
-            <input type="text" class="form-control" placeholder="Tìm kiếm nâng cao" />
-            <div class="input-group-btn">
-                <button type="submit" class="btn btn-default">
-                    <span class="glyphicon glyphicon-search"></span>
-                </button>
-            </div>
-        </div>
-    </form>
-</div>
