--- a/src/views/partials/search.ejs
+++ b/src/views/partials/search.ejs
@@ -6,11 +6,11 @@
         </div>
 
         <div class="form-group">
-            <i class="far fa-calendar-alt"></i>
+            <i class="far fa-calendar"></i>
             <input type="text" class="form-control text-center dt-picker dt-3" name="start" />
         </div>
         <div class="form-group">
-            <i class="far fa-calendar-alt"></i>
+            <i class="far fa-calendar"></i>
             <input type="text" class="form-control text-center dt-picker dt-0" name="end" />
         </div>
         <select class="custom-select" name="col">
