--- a/src/views/layouts/default.ejs
+++ b/src/views/layouts/default.ejs
@@ -1,7 +1,9 @@
 <!DOCTYPE html>
 <html lang="vi">
     <head>
-        <%- include("../partials/head"); %>
+        <meta charset="UTF-8" />
+        <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+        <title>RepairLog</title>
         <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.2/dist/css/bootstrap.min.css" />
         <link rel="stylesheet" href="/dist/css/all.min.css" />
 
@@ -15,6 +17,7 @@
             <ul class="nav nav-pills stats"></ul>
             <main><%- body%></main>
         </div>
+        <%- include('./modal') %>
 
         <script src="https://cdn.jsdelivr.net/npm/jquery@3.7.1/dist/jquery.min.js"></script>
         <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.6.2/dist/js/bootstrap.bundle.min.js"></script>
@@ -22,6 +25,7 @@
 
         <script src="/js/utils.js"></script>
         <script src="/js/stats.js"></script>
+        <script src="/js/modal.js"></script>
         <%- script %>
     </body>
 </html>
