--- a/src/views/partials/table.ejs
+++ b/src/views/partials/table.ejs
@@ -4,7 +4,7 @@
             href="#"
             class="btn btn-default btn-modal"
             data-title="Tiếp nhận"
-            data-body="api/v1/component/create .modal-container"
+            data-body="<%= view %>create"
             data-submit='{"class":"btn btn-primary","text": "Tiếp nhận","handler":"onModalSubmit"}'
             ><i class="fa fa-plus"></i> Thêm
         </a>
@@ -12,8 +12,8 @@
             href="#"
             id="menuDel"
             class="btn btn-danger btn-modal disabled"
-            data-title="Tiếp nhận"
-            data-body="/templates/modals/create.html"
+            data-title="Xóa dữ liệu"
+            data-body="<%= view %>delete"
             data-submit='{"class":"btn btn-danger","text": "Xóa"}'
             ><i class="fa fa-trash"></i> Xóa
         </a>
@@ -49,4 +49,5 @@
     data-visible-search="true"
     data-search-highlight="true"
     data-click-to-select="false"
+    data-loading-template="loadingTemplate"
 ></table>
