--- a/src/views/partials/navbar.ejs
+++ b/src/views/partials/navbar.ejs
@@ -21,7 +21,7 @@
                         class="dropdown-item btn-modal"
                         href="#"
                         data-title="Tiếp nhận theo file"
-                        data-body="<%= view %>import"
+                        data-body="/api/v1/view/import"
                         data-submit='{"class":"btn btn-primary","text":"Upload","handler":"onModalSubmit"}'
                         >Tiếp nhận</a
                     >
@@ -30,7 +30,7 @@
                         class="dropdown-item btn-modal"
                         href="#"
                         data-title="Sửa chữa theo file"
-                        data-body="<%= view %>import"
+                        data-body="/api/v1/view/import"
                         data-submit='{"class":"btn btn-primary","text":"Upload","handler":"onModalSubmit"}'
                         >Sửa chữa</a
                     >
