--- a/src/views/partials/script.ejs
+++ b/src/views/partials/script.ejs
@@ -7,5 +7,5 @@
 <script src="/dist/js/moment.min.js"></script>
 <script src="/js/root.js"></script>
 <script src="/js/table-control.js"></script>
-<script src="/js/stats.js"></script>
+<script src="/js/clouds.js"></script>
 <script src="/js/use.js"></script>
