--- a/src/views/pages/index.ejs
+++ b/src/views/pages/index.ejs
@@ -11,7 +11,7 @@
     <body>
         <%- include('../partials/navbar') %>
         <div class="mx-4">
-            <ul class="nav nav-pills stats"></ul>
+            <ul class="nav nav-pills" id="clouds"></ul>
             <%- include('../partials/table') %>
         </div>
         <%- include('../partials/modal') %>
