--- a/src/views/templates/forms/create.ejs
+++ b/src/views/templates/forms/create.ejs
@@ -1,4 +1,4 @@
-<form>
+<form method="POST" action="/order">
     <div class="form-group">
         <label class="control-label">Mã phiếu</label>
         <input class="form-control" name="receiptNo" type="text" />
