--- a/src/views/partials/navbar.ejs
+++ b/src/views/partials/navbar.ejs
@@ -22,7 +22,7 @@
                         href="#"
                         data-title="Tiếp nhận theo file"
                         data-body="/api/v1/view/import"
-                        data-submit='{"class":"btn btn-primary","text":"Upload","handler":"onModalSubmit"}'
+                        data-submit='{"class":"btn btn-primary","text":"Upload","handler":"uploadExcelFile"}'
                         >Tiếp nhận</a
                     >
                     <div class="dropdown-divider"></div>
@@ -31,7 +31,7 @@
                         href="#"
                         data-title="Sửa chữa theo file"
                         data-body="/api/v1/view/import"
-                        data-submit='{"class":"btn btn-primary","text":"Upload","handler":"onModalSubmit"}'
+                        data-submit='{"class":"btn btn-primary","text":"Upload","handler":"uploadExcelFile"}'
                         >Sửa chữa</a
                     >
                 </div>
