--- a/src/views/partials/script.ejs
+++ b/src/views/partials/script.ejs
@@ -4,6 +4,7 @@
 <script src="https://unpkg.com/bootstrap-table@1.22.1/dist/locale/bootstrap-table-vi-VN.min.js"></script>
 <script src="https://unpkg.com/bootstrap-table@1.22.1/dist/extensions/cookie/bootstrap-table-cookie.min.js"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/bootstrap-datepicker/1.10.0/js/bootstrap-datepicker.min.js"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/jquery-validate/1.19.5/jquery.validate.min.js"></script>
 <script src="/dist/js/moment.min.js"></script>
 <script src="/js/root.js"></script>
 <script src="/js/table-control.js"></script>
