--- a/src/views/templates/forms/create.ejs
+++ b/src/views/templates/forms/create.ejs
@@ -1,11 +1,11 @@
 <form method="POST" action="/order">
     <div class="form-group">
-        <label class="control-label">Mã phiếu</label>
-        <input class="form-control" name="receiptNo" type="text" />
+        <label class="control-label">Mã phiếu *</label>
+        <input class="form-control" name="receiptNo" type="text" required exactlength="32" />
     </div>
     <div class="form-group">
-        <label class="control-label">Tên TB</label>
-        <input class="form-control" name="model" type="text" />
+        <label class="control-label">Tên TB *</label>
+        <input class="form-control" name="model" type="text" required />
     </div>
     <div class="form-group">
         <label class="control-label">Serial</label>
