--- a/src/views/pages/index.ejs
+++ b/src/views/pages/index.ejs
@@ -14,8 +14,11 @@
             <ul class="nav nav-pills" id="clouds"></ul>
             <%- include('../partials/table') %>
         </div>
-        <%- include('../partials/modal') %>
+
+        <%- include('../partials/modal') %> <%- include('../partials/loader') %>
+
         <div id="toast"></div>
+
         <%- include('../partials/script') %>
     </body>
 </html>
