--- a/src/views/templates/forms/import.ejs
+++ b/src/views/templates/forms/import.ejs
@@ -1,4 +1,4 @@
-<form enctype="multipart/form-data" method="post" action="/import">
+<form enctype="multipart/form-data" method="post" action="/api/v1/import">
     <input
         type="file"
         name="file"
