--- a/src/scss/toast.scss
+++ b/src/scss/toast.scss
@@ -10,11 +10,10 @@
     background-color: #333;
     padding: 10px 24px;
     color: #fff;
-    min-width: 300px;
-    max-width: 500px;
     align-items: center;
     border-radius: 4px;
     border-left: 4px solid;
+    width: fit-content;
     box-shadow: 0 5px 8px rgba(0, 0, 0, 0.08);
 }
 
@@ -28,6 +27,7 @@
 }
 
 .toast__close {
+    margin-left: 15px;
     font-size: 20px;
     color: rgba(255, 255, 255, 0.3);
     cursor: pointer;
