--- a/src/views/partials/modal.ejs
+++ b/src/views/partials/modal.ejs
@@ -1,5 +1,5 @@
 <div class="modal fade" tabindex="-1" id="modal" role="dialog">
-    <div class="modal-dialog">
+    <div class="modal-dialog" role="document">
         <div class="modal-content">
             <div class="modal-header">
                 <h5 class="modal-title">Title</h5>
