--- a/src/views/partials/table.ejs
+++ b/src/views/partials/table.ejs
@@ -5,7 +5,7 @@
             class="btn btn-default btn-modal"
             data-title="Tiếp nhận"
             data-body="/api/v1/view/create"
-            data-submit='{"class":"btn btn-primary","text": "Tiếp nhận","handler":"createOne"}'
+            data-submit='{"class":"btn btn-primary","text": "Tiếp nhận","handler":"createOrder"}'
             ><i class="fa fa-plus"></i> Thêm
         </a>
         <a
@@ -22,9 +22,9 @@
         <div id="menuOthers" class="dropdown">
             <button class="btn btn-default dropdown-toggle" data-toggle="dropdown">Tác vụ khác</button>
             <div class="dropdown-menu">
-                <% statuses.forEach(status => { %>
-                <a class="dropdown-item hidden" href="#" data-url="/api/v1/status/<%= status.slug %>">
-                    Đánh dấu <%= status.name %>
+                <% status.forEach(s => { %>
+                <a class="dropdown-item hidden" href="#" data-url="/api/v1/order/status/<%= s.slug %>">
+                    Đánh dấu <%= s.name %>
                 </a>
                 <% }) %>
                 <li class="dropdown-header">Chọn thiết bị để xem thêm tác vụ</li>
