--- a/src/views/partials/loader.ejs
+++ b/src/views/partials/loader.ejs
@@ -3,7 +3,7 @@
         <div class="modal-content">
             <div class="modal-body text-center">
                 <div class="spinner-border text-primary" role="status"></div>
-                <div class="mt-2">Đang tải</div>
+                <div class="mt-2">Đang xử lý</div>
             </div>
         </div>
     </div>
