--- a/src/views/templates/forms/import.ejs
+++ b/src/views/templates/forms/import.ejs
@@ -9,6 +9,6 @@
 </div>
 <div class="download">
     <small>
-        <a href="/api/v1/download?file=mau_tiep_nhan.xlsx">Tải file mẫu tại đáy</a>
+        <a href="/api/v1/download?file=mau_tiep_nhan.xlsx" class="download-url">Tải file mẫu tại đáy</a>
     </small>
 </div>
