--- a/src/views/partials/navbar.ejs
+++ b/src/views/partials/navbar.ejs
@@ -18,20 +18,22 @@
                 </a>
                 <div class="dropdown-menu">
                     <a
-                        class="dropdown-item btn-modal"
+                        class="dropdown-item launch-modal"
                         href="#"
                         data-title="Tiếp nhận theo file"
                         data-body="/api/v1/view/import"
                         data-submit='{"class":"btn btn-primary","text":"Upload","handler":"uploadExcelFile"}'
+                        data-action="create"
                         >Tiếp nhận</a
                     >
                     <div class="dropdown-divider"></div>
                     <a
-                        class="dropdown-item btn-modal"
+                        class="dropdown-item launch-modal"
                         href="#"
                         data-title="Sửa chữa theo file"
                         data-body="/api/v1/view/import"
                         data-submit='{"class":"btn btn-primary","text":"Upload","handler":"uploadExcelFile"}'
+                        data-action="update"
                         >Sửa chữa</a
                     >
                 </div>
