--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -59,7 +59,7 @@ mark {
     }
 }
 
-.modal-body .download {
+.modal-body .download__container {
     position: absolute;
     transform: translateY(52px);
 }
