--- a/src/views/pages/index.ejs
+++ b/src/views/pages/index.ejs
@@ -11,7 +11,9 @@
     <body>
         <%- include('../partials/navbar') %>
         <div class="mx-4">
-            <ul class="nav nav-pills" id="clouds"></ul>
+            <ul class="nav nav-pills" id="clouds">
+                <li class="nav-item hidden"><a class="nav-link active" href="#">tìm kiếm</a></li>
+            </ul>
             <%- include('../partials/table') %>
         </div>
 
