--- a/src/views/partials/search.ejs
+++ b/src/views/partials/search.ejs
@@ -1,27 +1,28 @@
-<form class="form-inline my-2 my-lg-0 navbar-search" action="#">
-    <div class="search-box">
+<form class="form-inline my-2 my-lg-0 navbar-search" action="/search">
+    <div class="search-box mr-sm-2">
         <div class="form-group">
             <i class="fa fa-search"></i>
-            <input type="text" class="form-control" placeholder="Tìm kiếm ..." name="value" />
+            <input type="search" class="form-control" placeholder="Tìm kiếm ..." name="value" />
         </div>
 
         <div class="form-group">
             <i class="far fa-calendar"></i>
-            <input type="text" class="form-control text-center dt-picker dt-3" name="start" />
+            <input type="text" class="form-control text-center dt-picker start-date" name="start" />
         </div>
         <div class="form-group">
             <i class="far fa-calendar"></i>
-            <input type="text" class="form-control text-center dt-picker dt-0" name="end" />
+            <input type="text" class="form-control text-center dt-picker end-date" name="end" />
         </div>
-        <select class="custom-select" name="col">
+        <select class="custom-select" name="key">
+            <option value="all">Tất cả</option>
             <option value="receiptNo">Mã phiếu</option>
             <option value="model">Tên TB</option>
-            <option value="serial" selected>Serial</option>
+            <option value="serial">Serial</option>
             <option value="description">Mô tả lỗi</option>
             <option value="method">Biện pháp</option>
             <option value="remark">Chi tiết SC</option>
             <option value="status">Trạng thái</option>
         </select>
     </div>
-    <button type="submit" class="invisible"></button>
+    <button type="submit" class="btn btn-outline-secondary my-2 my-sm-0">Tìm kiếm</button>
 </form>
