--- a/src/views/partials/table.ejs
+++ b/src/views/partials/table.ejs
@@ -50,4 +50,5 @@
     data-search-highlight="true"
     data-click-to-select="false"
     data-loading-template="loadingTemplate"
+    data-multiple-select-row="true"
 ></table>
