--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -25,6 +25,12 @@ mark {
         :hover {
             background-color: rgba($color: #000000, $alpha: 0.1);
         }
+        .active {
+            color: #fff;
+        }
+        .active:hover {
+            background-color: rgba($color: $bg-primary, $alpha: 0.75);
+        }
     }
 }
 .search-box {
