--- a/src/views/partials/search.ejs
+++ b/src/views/partials/search.ejs
@@ -22,6 +22,7 @@
             <option value="method">Biện pháp</option>
             <option value="remark">Chi tiết SC</option>
             <option value="status">Trạng thái</option>
+            <option value="warning">Cảnh báo</option>
         </select>
     </div>
     <button type="submit" class="btn btn-outline-secondary my-2 my-sm-0">Tìm kiếm</button>
