--- a/src/views/partials/table.ejs
+++ b/src/views/partials/table.ejs
@@ -37,6 +37,7 @@
     id="table"
     data-classes="table table-striped table-bordered"
     data-toolbar="#toolbar"
+    data-show-export="true"
     data-cookie="true"
     data-cookie-id-table="saveId"
     data-undefined-text=""
