--- a/src/views/templates/forms/import.ejs
+++ b/src/views/templates/forms/import.ejs
@@ -1,10 +1,14 @@
-<div class="mb-2">
+<div class="mb-4">
     <form enctype="multipart/form-data" method="post" action="<%=baseURL%>/import">
         <input
             type="file"
             name="file"
             accept="application/vnd.openxmlformats-officedocument.spreadsheetml.sheet, application/vnd.ms-excel"
         />
+        <div class="form-check">
+            <input class="form-check-input" type="checkbox" checked />
+            <label class="form-check-label" for="flexCheckDefault"> Bỏ qua chỗ trống </label>
+        </div>
     </form>
 </div>
 <div class="download__container">
