--- a/src/views/templates/forms/import.ejs
+++ b/src/views/templates/forms/import.ejs
@@ -7,7 +7,7 @@
         />
         <div class="form-check">
             <input class="form-check-input" type="checkbox" checked />
-            <label class="form-check-label" for="flexCheckDefault"> Bỏ qua chỗ trống </label>
+            <label class="form-check-label" for="flexCheckDefault">Bỏ qua giá trị rỗng</label>
         </div>
     </form>
 </div>
