--- a/src/views/partials/script.ejs
+++ b/src/views/partials/script.ejs
@@ -10,6 +10,7 @@
 <script src="https://cdnjs.cloudflare.com/ajax/libs/xlsx/0.13.1/xlsx.full.min.js"></script>
 
 <script src="/dist/js/moment.min.js"></script>
+<script src="/js/utils.js"></script>
 <script src="/js/root.js"></script>
 <script src="/js/table-control.js"></script>
 <script src="/js/clouds.js"></script>
