--- a/src/views/partials/table.ejs
+++ b/src/views/partials/table.ejs
@@ -38,8 +38,6 @@
     data-classes="table table-striped table-bordered"
     data-toolbar="#toolbar"
     data-show-export="true"
-    data-cookie="true"
-    data-cookie-id-table="saveId"
     data-undefined-text=""
     data-url="<%= dataTable %>"
     data-pagination="true"
@@ -51,5 +49,5 @@
     data-search-highlight="true"
     data-click-to-select="false"
     data-loading-template="loadingTemplate"
-    data-multiple-select-row="true"
+    data-multiple-select-row="false"
 ></table>
