--- a/src/views/partials/table.ejs
+++ b/src/views/partials/table.ejs
@@ -49,5 +49,5 @@
     data-search-highlight="true"
     data-click-to-select="false"
     data-loading-template="loadingTemplate"
-    data-multiple-select-row="false"
+    data-multiple-select-row="true"
 ></table>
